--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -22,6 +22,7 @@ title: API Docs for Catalog Micro Service
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Please find all the docs for the entire organisation here
+baseurl: "intenal"
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
