--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -23,7 +23,7 @@ email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
   Please find all the docs for the entire organisation here
 baseurl: "intenal"
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https:/https://ambareeshb.github.io/catalog" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
 github_username:  jekyll
 
